--- a/postgres-exporter/postgresql-exporter-values.yaml
+++ b/postgres-exporter/postgresql-exporter-values.yaml
@@ -1,1 +1,14 @@
 # PostgreSQL Exporter Helm Values
+config:
+
+  datasource:
+    # Specify one of both datasource or datasourceSecret
+    host: 'postgres.database-monitoring.svc.cluster'
+    port: "5432"
+    userSecret:
+      name: postgresql-secret
+      key: POSTGRES_USER
+
+      passwordSecret: {}
+       name: postgresql-secret
+       key: POSTGRES_PASSWORD
