--- a/postgres-exporter/postgresql-exporter-values.yaml
+++ b/postgres-exporter/postgresql-exporter-values.yaml
@@ -9,10 +9,11 @@ config:
       name: postgresql-secret
       key: POSTGRES_USER
 
-      passwordSecret:
+    passwordSecret:
        name: postgresql-secret
        key: POSTGRES_PASSWORD
 
 serviceMonitor:
   enabled: true
-  labels: prometheus
+  labels: 
+    release: prometheus
